[package]
name = "day18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# once_cell = "1.18.0"
itertools = "0.12.0"
grid = "0.13.0"
lazy_static = "1.4.0"
# regex = "1.10.2"
# range-ext = "0.3.0"
# num-bigint = "0.4"
# gcd = "2.3.0"
# cached = "0.47.0"
# indexmap = "2.1.0"
# property = "0.3.3"
